Fixed alignment in Recipes

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,8 @@ a {
     outline: 3px solid #000000;
     padding-top:3px;
     padding-bottom: 3px;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 #desc {
